--- a/style.css
+++ b/style.css
@@ -3,7 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+header{
+    height: 80px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #2e3a46;
+    
+}
+header img{
+    height: 80px;
+    border-radius: 20px;
+}
 .container{
     height: 100%;
     background-color:#1e2d3b;
@@ -26,7 +38,7 @@
     text-align: center;
     background-color: #2e3a46;
 }
-img{
+.box img{
     width: 200px;
     height: 200px;
     object-fit: cover;
